--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/AccessDenied.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/AccessDenied.razor
@@ -20,8 +20,8 @@
                 </MudStack>
             </MudCardContent>
             <MudCardActions>
-                <MudButton Href="/" StartIcon="@Icons.Material.Filled.Home" Color="Color.Primary">صفحه اصلی</MudButton>
-                <MudButton Href="/account/login" StartIcon="@Icons.Material.Filled.Key" Color="Color.Primary">ورود به سامانه</MudButton>
+                <MudButton Href="@ClientRoutes.Home.Index" StartIcon="@Icons.Material.Filled.Home" Color="Color.Primary">صفحه اصلی</MudButton>
+                <MudButton Href="@ClientRoutes.Accounts.Login" StartIcon="@Icons.Material.Filled.Key" Color="Color.Primary">ورود به سامانه</MudButton>
             </MudCardActions>   
         </MudCard>
     </MudStack>
