--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/ChangePassword.razor
@@ -58,7 +58,7 @@
         _hasPassword = await UserManager.HasPasswordAsync(_user);
         if (!_hasPassword)
         {
-            RedirectManager.RedirectTo("Account/Manage/SetPassword");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.Manage.SetPassword);
         }
     }
 
