--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/SetPassword.razor
@@ -56,7 +56,7 @@
         var hasPassword = await UserManager.HasPasswordAsync(_user);
         if (hasPassword)
         {
-            RedirectManager.RedirectTo("Account/Manage/ChangePassword");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.Manage.ChangePassword);
         }
     }
 
