--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Register.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Register.razor
@@ -54,7 +54,7 @@
         </EditForm>
         <MudDivider Class="my-4" />
 
-        <ExternalLoginPicker InvokeSource="InvokeSource.Register" />
+        <ExternalLoginPicker ExternalLoginPickerSource="ExternalLoginSource.Register" />
     </MudPaper>
 </MudContainer>
 
