--- a/src/App/Server/GoldEx.Server/Components/_Imports.razor
+++ b/src/App/Server/GoldEx.Server/Components/_Imports.razor
@@ -4,12 +4,19 @@
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
+@using Microsoft.AspNetCore.Components.Sections
+@using Microsoft.AspNetCore.Authentication
+@using Microsoft.AspNetCore.Identity
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MudBlazor
 @using GoldEx
 @using GoldEx.Client
 @using GoldEx.Client.Components.Layouts
 @using GoldEx.Client.Components
-@using Microsoft.AspNetCore.Components.Sections
-@using MudBlazor
+@using GoldEx.Sdk.Common.Extensions
+@using GoldEx.Sdk.Server.Domain.Entities.Identity
+@using GoldEx.Server.Common.Enums
+@using GoldEx.Shared.Routings
+@using GoldEx.Server.Services
