--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/ForgotPassword.razor
@@ -32,10 +32,10 @@
     private async Task OnValidSubmitAsync()
     {
         var user = await UserManager.FindByEmailAsync(Input.Email);
-        if (user is null || !(await UserManager.IsEmailConfirmedAsync(user)))
+        if (user is null || !await UserManager.IsEmailConfirmedAsync(user))
         {
             // Don't reveal that the user does not exist or is not confirmed
-            RedirectManager.RedirectTo("Account/ForgotPasswordConfirmation");
+            RedirectManager.RedirectTo(ClientRoutes.Accounts.ForgotPasswordConfirmation);
         }
 
         // For more information on how to enable account confirmation and password reset please
@@ -43,12 +43,12 @@
         var code = await UserManager.GeneratePasswordResetTokenAsync(user);
         code = WebEncoders.Base64UrlEncode(Encoding.UTF8.GetBytes(code));
         var callbackUrl = NavigationManager.GetUriWithQueryParameters(
-            NavigationManager.ToAbsoluteUri("Account/ResetPassword").AbsoluteUri,
+            NavigationManager.ToAbsoluteUri(ClientRoutes.Accounts.ResetPassword).AbsoluteUri,
             new Dictionary<string, object?> { ["code"] = code });
 
         await EmailSender.SendPasswordResetLinkAsync(user, Input.Email, HtmlEncoder.Default.Encode(callbackUrl));
 
-        RedirectManager.RedirectTo("Account/ForgotPasswordConfirmation");
+        RedirectManager.RedirectTo(ClientRoutes.Accounts.ForgotPasswordConfirmation);
     }
 
     private sealed class InputModel
